# loop-detector

./: .gitignore  README.md  docker-compose.yaml  env-example
docs/: schema.drawio
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: root.styles.css
frontend/public/fonts/inglobal/: inglobal.css
frontend/src/: App.vue  errorFmt.ts  main.ts  router.ts  style.css  types.ts
frontend/src/components/: AddNewTelegramNotification.vue  FullMessagesTable.vue  Graph.vue  GraphImage.vue  GraphsHistoryChart.vue  LoginForm.vue  LoopPreviewCard.vue  Menu.vue  MessagesChart.vue  MessagesInfo.vue  MessagesTable.vue  TelegramNotification.vue  UserDetail.vue  Welcome.vue
frontend/src/pages/: CurrentLoop.vue  Home.vue  Login.vue  LoopGraph.vue  LoopsHistory.vue  Notifications.vue
frontend/src/services/: auth.service.ts  books.ts  graph.ts  messages.analyzer.ts  messages.formatter.ts  messages.service.ts  setupInterceptors.ts  telegramNotifications.ts  token.service.ts  user.service.ts  user.ts
frontend/src/services/api/: setupInterceptors.ts
frontend/src/services/auth/: auth.service.ts
frontend/src/store/: auth.module.ts  index.ts
graph_gen/: .dockerignore  Dockerfile  README.md  main.py  mypy.ini  pyproject.toml
graph_gen/app/: api.py  graph.py  interfaces.py  loopd.py  settings.py
graph_gen/app/services/: cache.py  decorators.py  device.py  ecstasy.py  elastic.py  graph_writter.py  log_parser.py  log_recorder.py  network.py  traceroute.py
graph_gen/app/services/notifications/: builder.py  notifier.py  telegram.py
graph_gen/config/: sample.es-matches.json
graph_gen/env/: sample.env
settings/nginx/: default.conf
web_app/: .gitignore  Dockerfile  README.md  main.py  notifications.json  pyproject.toml  run.py
web_app/app/: settings.py
web_app/app/handlers/: auth.py  graph.py  graph_info.py  log_messages.py  notifications.py
web_app/app/middlewares/: logging.py
web_app/app/schemas/: auth.py  graph.py  graph_info.py  graph_storage.py  log_messages.py  notifications.py  tg_bot.py
web_app/app/services/: auth.py  cache.py  ecstasy.py  graph_info.py  graph_storage.py  log_messages.py  logging.py  loop_graph.py
web_app/app/services/notifications/: config.py  exc.py  telegram.py
web_app/env/: sample.env
