[tool.poetry]
name = "app"
version = "0.2.7"
description = ""
authors = ["ig-rudenko <ig.rudenko1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.2"
pyzabbix = "^1.3.1"
redis = "^5.0.4"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
jq = "^1.8.0"


[tool.poetry.group.dev.dependencies]
pyvis = "^0.3.2"
black = {extras = ["d"], version = "^24.4.2"}


[tool.poetry.group.mypy.dependencies]
mypy = "^1.13.0"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
