[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["ig-rudenko <ig.rudenko1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.3"
aiohttp = "^3.9.5"
redis = "^5.0.6"
loguru = "^0.7.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^24.4.2" }


[tool.poetry.group.mypy.dependencies]
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
