[tool.poetry]
package-mode = false
authors = ["ig-rudenko <ig.rudenko1@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"
aiohttp = "^3.10.10"
redis = "^5.2.0"
loguru = "^0.7.2"
requests = "^2.32.3"
aiofiles = "^24.1.0"


[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^24.4.2" }

[tool.poetry.group.checks.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
